testing/tests/ui/ref_deref.stderr
error: failed to parse template source
 --> <source attribute>:1:8
  |
       1 | {% let *x = 2 %}
         |        ^ close to this token
         |
 --> tests/ui/ref_deref.rs:4:12
  |
4 | #[template(source = "{% let *x = 2 %}", ext = "html")]
  |            ^^^^^^
